fix: collapse avatar image until load full version

--- a/src/styles/feedback.css
+++ b/src/styles/feedback.css
@@ -99,6 +99,7 @@ img.feedback-card__avatar {
   /* position: relative;
   z-index: 2;*/
   width: 100%;
+  /*min-width: 100%;*/
   height: auto;
   /*width: 80px;
   height: 80px;
@@ -108,6 +109,10 @@ img.feedback-card__avatar {
   border-radius: 50%;*/
   -webkit-clip-path: circle(50%);
   clip-path: circle(50%);
+}
+
+picture.feedback-card__avatar {
+  min-width: 80%;
 }
 
 .feedback-card__date {
